 - FFmpeg: Support lossless VP9 encoding
 - mGUI: Add fast forward toggle
Changes from beta 1:
Features:
 - Libretro: Add Game Boy cheat support
 - Qt: Separate fast forward volume control (fixes mgba.io/i/846, mgba.io/i/1143)
 - Switch: Rumble support
 - Switch: Rotation support
 - Qt: State file load/save menu options
 - Windows installer
 - Tile viewer now has adjustable width
Bugfixes:
 - PSP2: Fix audio crackling after fast forward
 - PSP2: Fix audio crackling when buffer is full
 - 3DS: Fix unused screens not clearing (fixes mgba.io/i/1184)
 - GBA Video: Fix caching with background toggling (fixes mgba.io/i/1118)
 - Wii: Fix drawing caching regression (fixes mgba.io/i/1185)
 - Switch: Fix incorrect mapping for fast forward cap
 - GB, GBA: Fix broken opposing button filter (fixes mgba.io/i/1191)
 - Qt: Fix jumbled background when paused
 - Qt: Fix FPS counter on Windows
 - GB, GBA Savedata: Fix leaks when loading masked save (fixes mgba.io/i/1197)
 - Qt: Fix focus issues with load/save state overlay
 - GB Video: Fix SGB border hole size
Misc:
 - mGUI: Add SGB border configuration option
 - mGUI: Add support for different settings types
 - Wii: Define _GNU_SOURCE (fixes mgba.io/i/1106)
 - Wii: Expose stretch configuration in settings
 - Wii: Stretch now sets pixel-accurate mode size cap
 - Qt: Ensure camera image is valid
 - GB: Improved SGB2 support
 - Libretro: Reduce rumble callbacks
 - Debugger: Minor text fixes
 - Qt: Debugger console history
 - Qt: Detect presence of GL_ARB_framebuffer_object
 - Python: Minor API improvements

0.7 beta 1: (2018-09-24)
- Initial beta for 0.7

0.6.3: (2018-04-14)
Bugfixes:
 - GB Audio: Revert unsigned audio changes
 - GB Video: Fix bad merge (fixes mgba.io/i/1040)
 - GBA Video: Fix OBJ blending regression (fixes mgba.io/i/1037)

0.6.2: (2018-04-03)
Bugfixes:
 - Core: Fix ROM patches not being unloaded when disabled (fixes mgba.io/i/962)
 - 3DS: Fix opening files in directory names with trailing slashes